# xlsxlite

./: .gitignore  .travis.yml  CHANGELOG.md  DEPLOY.md  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
requirements/: tests.txt
xlsxlite/: book.py  utils.py
xlsxlite/test/: base.py  test_book.py  test_perf.py  test_utils.py  test_writer.py
