[project]
name = "xlsxlite"
version = "0.2.0"
description = "Lightweight XLSX writer with emphasis on minimizing memory usage."
authors = [
    {"name" = "TextIt", "email" = "code@textit.com"}
]
license = "MIT"
classifiers=[
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
]
requires-python = ">=3.10"
dependencies = []

[tool.poetry.urls]
repository = "http://github.com/nyaruka/xlsxlite"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytz = "^2021.1"
XlsxWriter = "^1.3.7"
openpyxl = "2.5.14"
lxml = "^4.9.1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
