[project]
name = "xlsxlite"
version = "1.0.0"
description = "Lightweight XLSX writer with emphasis on minimizing memory usage."
authors = [
    {"name" = "TextIt", "email" = "code@textit.com"}
]
license = "MIT"
classifiers=[
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
]
requires-python = ">=3.10"
dependencies = []

[tool.poetry.urls]
repository = "http://github.com/nyaruka/xlsxlite"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytz = "^2024.2"
XlsxWriter = "^3.2.0"
openpyxl = "3.1.5"
lxml = "^5.3.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
